<resources>
    <string name="app_name">ShopClient</string>
    <string name="action_settings">Settings</string>
    <string name="preference_currencies" translatable="false">pl.p32.shopclient.CURRENCIES</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="homepage">Homepage</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="products_especially_for_you">Products especially for you</string>
    <string name="title_activity_category_product" translatable="false">CategoryProduct</string>
    <string name="title_activity_product_category" translatable="false">ProductCategoryActivity</string>
    <string name="product_added_to_cart">Product has been added to the cart</string>
    <string name="product_already_in_cart">Product is already in the cart</string>
    <string name="title_activity_product_details" translatable="false">ProductDetailsActivity</string>
    <string name="title_activity_cart" translatable="false">CartActivity</string>
    <string name="total_price">Total</string>
    <string name="checkout_order">Checkout</string>
    <string name="order_confirmed">We hereby confirm your order</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="pick_currency">Pick currency</string>
    <string name="pln" translatable="false">PLN</string>
    <string name="usd" translatable="false">USD</string>
    <string name="eur" translatable="false">EUR</string>
    <string name="gbp" translatable="false">GBP</string>
    <string name="action_currency">Currency settings</string>
    <string name="title_activity_barcode">Product scanner</string>
    <string name="available_items">"Available items: "</string>
    <string name="qr_code_activity_desc">QR code scanner lets you scan QR code of product. Use this feature if you want to navigate directly to details page of given product.</string>
    <string name="qr_code_button">Scan QR code</string>
    <string name="barcode_scanner_unavailable">Could not set up the barcode detector. You cannot use the scanner.</string>
    <string name="qr_code_storage_permission_denied">You denied the permission needed to store captured picture.</string>
    <string name="qr_code_not_found">QR code was not found. Try again.</string>
    <string name="captured_picture_not_found">Couldn\'t find captured picture. Probably it\'s deleted.</string>
    <string name="empty_title" translatable="false" />
    <string name="search_for_product">Search for product</string>
    <plurals name="chosen_items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">Search</string>
</resources>
