<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="220dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_currency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3">

        <RadioButton
            android:id="@+id/pln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pln" />

        <RadioButton
            android:id="@+id/usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usd" />

        <RadioButton
            android:id="@+id/eur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eur" />

        <RadioButton
            android:id="@+id/gbp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gbp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>