<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/homepage" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_qr_scan"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/scan_qr_code" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
